# ComponentCombat

./: .clang-format  .gitignore  CMakeLists.txt  debug.txt  gen_img.py  package_names.txt  remember.txt  run.sh
data/saves/: 0.json  base.json
data/textDescriptions/UI/: CharacterCreation.json  Traits.json
data/userSaves/: new 1.json
dependencies/: CMakeLists.txt
dependencies/behavior-tree/: CMakeLists.txt
dependencies/behavior-tree-cpp/: CMakeLists.txt
dependencies/nlohmann-json/: CMakeLists.txt
resources/behavior_trees/: melee.xml  my_tree.xml  ranger.xml
resources/images/: README.txt
shaders/attackFields/: singleTarget.frag
shaders/backgrounds/: stars.frag
src/: CMakeLists.txt  Source.cpp
src/combatLog/: CMakeLists.txt  CombatLog.cpp  CombatLog.hpp
src/ecs/: CMakeLists.txt  Component.cpp  Component.hpp  Constants.hpp  ItemComponent.hpp  Registry.hpp  Scene.cpp  Scene.hpp  System.cpp  System.hpp
src/ecs/component/: ActorComponent.hpp  Component.hpp  ComponentHelpers.hpp  EffectComponent.hpp  EntityComponent.hpp  ItemComponent.hpp  TraitComponent.hpp  TraitComponentHelpers.hpp  TratiComponent.hpp
src/ecs/system/: BehaviorSystem.cpp  BehaviorSystem.hpp  EffectSystem.cpp  EffectSystem.hpp  EnemySystem.cpp  EnemySystem.hpp  System.cpp  System.hpp  TraitActivator.cpp  TraitActivator.hpp  UiSystem.cpp  UiSystem.hpp
src/stateManager/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Context.h  Context.hpp  State.h  State.hpp  StateManager.cpp  StateManager.h  StateManager.hpp
src/states/: CMakeLists.txt  CharacterCreation.cpp  CharacterCreation.hpp  Game.cpp  Game.h  Game.hpp  GamePlay.cpp  GamePlay.h  GamePlay.hpp  ImageLoader.h  ImageLoader.hpp  LoadGame.cpp  LoadGame.h  LoadGame.hpp  MainMenu.cpp  MainMenu.h  MainMenu.hpp  SaveLoader.cpp  SaveLoader.hpp  SaveManager.cpp  SaveManager.hpp  Simulation.cpp  Simulation.h  TraitShop.cpp  TraitShop.hpp  UiTest.cpp  UiTest.hpp
src/utility/: CMakeLists.txt  ImGuiHelper.cpp  ImGuiHelper.hpp  ImageNames.hpp  ShaderManager.cpp  ShaderManager.hpp  Timer.hpp
tools/: gen_component.py  gen_img.py
